@@ -5,6 +5,9 @@ Revision history for Perl distribution CPAN-Testers-Data-Addresses
         - extended test suite.
         - added clean tests.
         - added backup tests.
+        - rearranged configuration, to optimise logging.
+        - now checks and stores available drivers to ensure we have the 
+          required backup drivers installed.
 
 0.12    2013-08-07
         - forgot to update the skip value in tests :(
